target_sources(${TARGET_NAME} PRIVATE 
AnyReference.h 
ArrayViewStlSpan.h  
EnumSet.h
MoveReference.h 
PointerStl.h
StridedArrayView.h
Tags.h
Array.h        
BigEnumSet.h        
EnumSet.hpp         
Optional.h
Reference.h
String.cpp
ArrayTuple.cpp 
BigEnumSet.hpp 
GrowableArray.h
OptionalStl.h
ReferenceStl.h
String.h
ArrayTuple.h   
Pair.h
ScopeGuard.h
StringStl.h
ArrayView.h    
constructHelpers.h 
initializeHelpers.h 
PairStl.h 
sequenceHelpers.h
StringView.cpp
ArrayViewStl.h 
Containers.h 
LinkedList.h        
Pointer.h 
StaticArray.h 
StringView.h
)

add_subdirectory(Implementation)






