target_sources(${TARGET_NAME} PRIVATE
GrowableArray.h
Array.h
ArrayTuple.h
StringView.cpp
EnumSet.h
BigEnumSet.h
ArrayView.h
ArrayViewStlSpan.h
Pair.h
Pointer.h
Tags.h
String.h
sequenceHelpers.h
Reference.h
String.cpp
EnumSet.hpp
MoveReference.h
StridedArrayView.h
constructHelpers.h
AnyReference.h
ArrayViewStl.h
BigEnumSet.hpp
Optional.h
OptionalStl.h
PairStl.h
initializeHelpers.h
StringView.h
Containers.h
ReferenceStl.h
LinkedList.h
PointerStl.h
StaticArray.h
StringStl.h
ArrayTuple.cpp
ScopeGuard.h
)
add_subdirectory(Implementation)
